objects/nitro__Nitro_EA_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>nitro__Nitro_EverydayActivity__c</fullName>
        <label>Nitro EverydayActivity</label>
        <referenceTo>nitro__Nitro_EverydayActivity__c</referenceTo>
        <relationshipLabel>Nitro EA Criteria</relationshipLabel>
        <relationshipName>Nitro_EA_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nitro__comparator__c</fullName>
        <label>comparator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__compare_to_value__c</fullName>
        <label>compare to value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__compare_to_value_long__c</fullName>
        <label>compare to value long</label>
        <length>9600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nitro__field_name__c</fullName>
        <label>field name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__field_type__c</fullName>
        <label>field type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__reference_field_id__c</fullName>
        <label>reference field id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Nitro EA Criteria</label>
    <listViews>
        <fullName>nitro__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nitro EA Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nitro EA Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>